Run poetry lock on failure to install due to change in pythonpackage.yml

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -26,7 +26,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
-      - run: poetry install
+      - run: |
+          if ! poetry install; then
+            poetry lock
+            poetry install
+          fi
       - name: Pylint
         run: poetry run pylint functional
       - name: black
