--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -27,6 +27,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: poetry
       - run: |
+          if [[ "${{matrix.python-version}}" == "3.8" ]]; then
+            sed -i -e 's/python = "^3.9.0"/python = "^3.8.0"/g' -e 's/pylint = "^3.3.3"/pylint = "^2.17.4"/g' pyproject.toml
+          fi
           if ! poetry install; then
             poetry lock
             poetry install
