--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         include:
           - python-version: "3.11"
             use_pandas: 1
@@ -26,7 +26,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
-      - run: poetry install
+      - run: |
+          if ! poetry install; then
+            poetry lock
+            poetry install
+          fi
       - name: Pylint
         run: poetry run pylint functional
       - name: black
